--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,34 +1,31 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-# This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
-
-name: Java CI with Gradle
+name: build
 
 on:
-  push:
-    branches: [ "FG_2.1" ]
-  pull_request:
-    branches: [ "FG_2.1" ]
-
-permissions:
-  contents: read
+  - push
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
-      with:
-        java-version: '11'
-        distribution: 'temurin'
-    - name: Build with Gradle
-      uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
-      with:
-        arguments: build
+      - name: Checkout repository
+        uses: actions/checkout@v2
+        with:
+          submodules: recursive
+      - name: Java setup
+        uses: actions/setup-java@v2
+        with:
+          distribution: "zulu"
+          java-version: 8
+          cache: "gradle"
+      - name: Set outputs
+        id: vars
+        run: echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
+      - name: Build
+        run: gradle/gradle-build-action${{ steps.vars.outputs.sha_short }}
+      - name: Rename build artifacts
+        run: mv build/libs/gradle-build-action-*.jar build/libs/gradle-build-action${{ steps.vars.outputs.sha_short }}.jar
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: NekoCat
+          path: build/libs/gradle-build-action${{ steps.vars.outputs.sha_short }}.jar
