--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -21,7 +21,7 @@ jobs:
         id: vars
         run: echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
       - name: Build
-        run: chmod +x ./gradlew && ./gradlew setupCiWorkspace && ./gradlew clean && ./gradlew build
+        run: chmod +x ./gradlew && ./gradlew build
       - name: Rename build artifacts
         run: mv build/libs/gradle-build-action-*.jar build/libs/gradle-build-action${{ steps.vars.outputs.sha_short }}.jar
       - name: Upload build artifacts
