--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -23,9 +23,9 @@ jobs:
       - name: Build
         run: chmod +x ./gradlew && ./gradlew build
       - name: Rename build artifacts
-        run: mv build/libs/gradle-build-action-*.jar build/libs/gradle-build-action${{ steps.vars.outputs.sha_short }}.jar
+        run: mv build/libs/gradle-build-action-*.jar build/libs/${{ steps.vars.outputs.sha_short }}.jar
       - name: Upload build artifacts
         uses: actions/upload-artifact@v2
         with:
           name: NekoCat
-          path: build/libs/gradle-build-action${{ steps.vars.outputs.sha_short }}.jar
+          path: build/libs/${{ steps.vars.outputs.sha_short }}.jar
