--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Build
         run: chmod +x ./gradlew && ./gradlew build
       - name: Rename build artifacts
-        run: mv build/libs/gradle-build-action-*.jar build/libs/${{ steps.vars.outputs.sha_short }}.jar
+        run: mv build/libs/*.jar build/libs/${{ steps.vars.outputs.sha_short }}.jar
       - name: Upload build artifacts
         uses: actions/upload-artifact@v2
         with:
